parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__test-lexer-23.snap
---
source: parser/src/lexer/lexer.rs
description: /=
---
[
    Token {
        kind: DivAssign,
        value: None,
        start: 0,
        end: 2,
    },
]
