parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__test-lexer-29.snap
---
source: parser/src/lexer/lexer.rs
description: //=
---
[
    Token {
        kind: IntDivAssign,
        value: None,
        start: 0,
        end: 3,
    },
]
